--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.4.0",
+    "@tanstack/react-query": "^5.67.3",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "axios": "^1.8.3",
+    "casual": "^1.6.2",
     "eventemitter3": "^5.0.1",
+    "faker": "^6.6.6",
+    "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-infinite-scroller": "^1.2.6",
+    "react-virtuoso": "^4.12.3",
+    "react-window": "^1.8.11",
     "vitest": "^2.1.2",
     "zustand": "^5.0.1"
   },
